# prioritization-discovery

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yaml
src/prioritization-discovery/: discovery.py
src/prioritization_discovery/: __init__.py  config.py  discovery.py  rules.py
test/: discovery_tests.py
tests/: discovery_test.py  discovery_tests.py  rules_test.py
tests/assets/: event_log_2.csv
