[tool.poetry]
name = "prioritization-discovery"
version = "0.4.1"
description = ""
authors = ["David Chapela de la Campa <david.chapela.delacampa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pandas = "^2.0.0"
pandasql = "^0.7.3"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

